10-Monitoring/Prometheus/07-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-congresofoss
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.congresofoss.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port: 
              number: 80
